@@ -19,6 +19,7 @@ import java.util.HashMap;
 import java.util.Map;
 
 import org.joda.time.Chronology;
+import org.joda.time.ChronologyType;
 import org.joda.time.DateTimeConstants;
 import org.joda.time.DateTimeZone;
 
@@ -157,6 +158,17 @@ public final class GregorianChronology extends CommonGJChronology {
     private Object readResolve() {
         Chronology base = getBase();
         return base == null ? getInstanceUTC() : getInstance(base.getZone());
+    }
+
+    //-----------------------------------------------------------------------
+    /**
+     * Returns the ChronologyType constant for this Chronology.
+     *
+     * @return the chronology type
+     * @since 1.2
+     */
+    public ChronologyType getType() {
+        return ChronologyType.gregorian();
     }
 
     // Conversion
